@@ -84,5 +84,5 @@ aa87e663677a0551fe52c2b047c13caa90c9e4855cc617aa970117b53b9a58dc  test/results/t
 e97b9328d4d8ffd130cd89920698c4e6cfc4e9b1b4a848dde3073016291d4976  test/results/test0105-amd64-binary
 c39ebae7013d9096215862241a4d919a871b790b9054e454b6a7b0ff36037f61  test/results/test0106-aarch64-binary
 d4f64948ebfa14e446a321a481c2992eb44ba3302795355353b20533a1b4eb06  test/results/test0106-amd64-binary
-3863c593ad5899a5046ad3f0a78a46c72d42db1f2757681855cf9cc2efcf755f  test/results/test1000-aarch64-binary
-7c2ad53a84f49e037abd7ecc37a4772770ace0af1d444d75d9e2ba84e75130bf  test/results/test1000-amd64-binary
+6aff0225a09f2d4126a5ad900a68f965c4d987c4ad09a9d635d765e3b8b60906  test/results/test1000-aarch64-binary
+6ffbf6ef9cec8d494a859e344c947a4d5768fe402bcf8ea7875ab23b7eb04bb7  test/results/test1000-amd64-binary
